# password-controller

./: Makefile  pyproject.toml
app/: main.py
app/internal/password/logic/: generate_password.py
app/internal/password/models/: generate_password.py
app/internal/user/logic/: user.py
app/internal/user/models/: user.py
app/persistency/: postgres.py
app/routers/: __init__.py  password.py  user.py
app/tests/password/: generate_password.py
notas/: ideia.txt  para segurança de dados sensíveis.txt
