[tool.poetry]
name = "passwordgenerator"
version = "0.1.0"
description = ""
authors = ["dev-nataliaps"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
pydantic = "^1.10.7"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
